--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "temp-data-holder",
+    "name": "data-holder",
     "version": "0.0.1",
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node ."
     },
     "keywords": [],
     "author": "https://github.com/Proyas21",
